--- a/src/ProgressBar.csproj
+++ b/src/ProgressBar.csproj
@@ -14,7 +14,7 @@
 		<PackageTags>c#;net8.0</PackageTags>
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageReadmeFile>README.nuget.md</PackageReadmeFile>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<PackageId>CLI.$(AssemblyName)</PackageId>
 		<PackageIcon>ProgressBar_Icon.png</PackageIcon>
@@ -29,7 +29,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Include="..\README.md">
+    <None Include="..\README.nuget.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
