--- a/sample/CliProgressBar.Sample.csproj
+++ b/sample/CliProgressBar.Sample.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\ProgressBar.csproj" />
+    <ProjectReference Include="..\src\CliProgressBar.csproj" />
   </ItemGroup>
 
 </Project>
